log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:29:53 PM UTC: 
 tests:  0|6
total_score: 0/70
31611cc
Thu 30 Mar 2023 03:32:39 PM UTC: 
 arraylist.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:18:3: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   18 |   lista->data=(void**)calloc(lista->capacity,sizeof(void));
      |   ^~~~~
      |   list
arraylist.c:18:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b288765
Thu 30 Mar 2023 03:32:51 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
30b9cc7
Thu 30 Mar 2023 03:34:48 PM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:10: error: invalid type argument of ‘->’ (have ‘int’)
   24 |   l->size->data=data;
      |          ^~
Compilation failed
4a043bc
Thu 30 Mar 2023 03:35:00 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:10: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   24 |   l->size=data;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
2a02c25
Thu 30 Mar 2023 03:35:10 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:13: error: dereferencing ‘void *’ pointer [-Werror]
   24 |   l->size = *data;
      |             ^~~~~
arraylist.c:24:11: error: void value not ignored as it ought to be
   24 |   l->size = *data;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
c5ac29a
Thu 30 Mar 2023 03:36:25 PM UTC: 
 arraylist.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:27:24: error: ‘ArrayList’ {aka ‘struct ArrayList’} has no member named ‘dara’; did you mean ‘data’?
   27 |     l->data=realloc(l->dara,l->size * sizeof(void*));
      |                        ^~~~
      |                        data
Compilation failed
1155d37
Thu 30 Mar 2023 03:36:32 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
375bc6c
Thu 30 Mar 2023 03:37:15 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:30:12: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   30 |     l->size=data;
      |            ^
cc1: all warnings being treated as errors
Compilation failed
d850fa2
Thu 30 Mar 2023 03:37:24 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:30:12: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   30 |     l->size+=data;
      |            ^~
cc1: all warnings being treated as errors
Compilation failed
1c7ba81
Thu 30 Mar 2023 03:37:37 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:30:12: error: comparison between pointer and integer [-Werror]
   30 |     l->size==data;
      |            ^~
arraylist.c:30:12: error: statement with no effect [-Werror=unused-value]
   30 |     l->size==data;
      |     ~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
99ecf35
Thu 30 Mar 2023 03:38:53 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:30:5: error: statement with no effect [-Werror=unused-value]
   30 |     l
      |     ^
arraylist.c:30:6: error: expected ‘;’ before ‘}’ token
   30 |     l
      |      ^
      |      ;
   31 |   }
      |   ~   
cc1: all warnings being treated as errors
Compilation failed
e8358fd
Thu 30 Mar 2023 03:39:05 PM UTC: 
 arraylist.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
0af8bc6
